--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
 <body>
 
     <div class="container">
-        <h1>Arma la mejor posada del año</h1>
-    </div>
-
-    <div class="mascara">
         <video autoplay loop id="video-background" muted plays-inline>
             <source src="video/Christmas.mp4" type="video/mp4">
         </video>
+        <h1 class="text-center">Arma la mejor posada del año</h1>
+        <p class="text-center">Con
+            <b>mi posada</b> podrás organizar tu posada de la manera más sencilla.</p>
+        <button type="button" class="btn btn-primary btn-lg">Comienza ahora</button>
     </div>
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
