--- a/index.html
+++ b/index.html
@@ -58,11 +58,17 @@
         <button type="button" class="btn btn-primary btn-lg">Comienza ahora</button>
     </div>
 
-    <div class="row">
+    <div class="row" id="info">
+        <div class="col-md-12 align-self-center" id="div2">
+            <p id="txt2">¡ARMA TU POSADA EN UN SOLO LUGAR!</p>
+        </div>
         <div class="col-md-6">
             <img src="pinata_estrella.jpg" alt="">
         </div>
-        <div class="col-md-6"></div>
+        <div class="col-md-6 align-self-center">
+            <p id="txt3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa porro molestias, mollitia iure nesciunt accusamus dolor doloremque, quas facilis quibusdam, voluptas commodi consequuntur delectus inventore. Ab autem reiciendis voluptate ex?</p>
+        </div>
+
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
