--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <h1 class="text-center">Arma la mejor posada del año</h1>
         <p class="text-center">Con
             <b>mi posada</b> podrás organizar tu posada de la manera más sencilla.</p>
-        <button type="button" class="btn btn-primary btn-lg">Comienza ahora</button>
+            <p class="text-center"><a class="btn btn-primary btn-lg" href="">Comienza ahora</a></p>
     </div>
 
     <div class="row" id="info">
