--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" href="estilos.css">
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <title>Document</title>
 </head>
 
@@ -59,21 +60,22 @@
         <h1 class="text-center">Arma la mejor posada del año</h1>
         <p class="text-center">Con
             <b>mi posada</b> podrás organizar tu posada de la manera más sencilla.</p>
-        <button type="button" class="btn btn-primary btn-lg">Comienza ahora</button>
+        <button type="button" class="btn btn-primary btn-lg align-self-center">Comienza ahora</button>
     </div>
 
-    <div class="row" id="info">
+    <div class="row info">
         <div class="col-md-12 align-self-center" id="div2">
-            <p id="txt2">¡ARMA TU POSADA EN UN SOLO LUGAR!</p>
+            <p id="txt2">¡Arma tu posada en un solo lugar!</p>
         </div>
         <div class="col-md-6">
-            <img src="pinata_estrella.jpg" alt="">
+            <img src="pinata_estrella.jpg" class="image-fluid" alt="">
         </div>
         <div class="col-md-6 align-self-center">
-            <p id="txt3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa porro molestias, mollitia iure nesciunt accusamus dolor doloremque, quas facilis quibusdam, voluptas commodi consequuntur delectus inventore. Ab autem reiciendis voluptate ex?</p>
+            <p id="txt3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa porro molestias</p>
         </div>
-
+        <br> <br>
     </div>
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
