--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" href="estilos.css">
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <title>Document</title>
 </head>
 
@@ -16,38 +17,16 @@
     <div class="mascara">
     </div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Mi Posada</a>
+        <a class="navbar-brand" href="#">Posadas Perronas</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home
-                        <span class="sr-only">(current)</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Dropdown
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
-                </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <input class="form-control mr-sm-2" type="search" placeholder="Posadas Perronas" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
         </div>
@@ -57,10 +36,10 @@
     </video>
 
     <div id="first" class="container">
-        <h1 class="text-center">Arma la mejor posada del año</h1>
+        <h1 class="text-center" id="titulo">Arma la mejor posada del año</h1> <br>
         <p class="text-center">Con
             <b>mi posada</b> podrás organizar tu posada de la manera más sencilla.</p>
-        <p class="text-center"><a class="btn btn-primary btn-lg" href="">Comienza ahora</a></p>
+        <p class="text-center"><a class="btn btn-primary btn-lg" id="boton" href="">Comienza ahora</a></p>
     </div>
 
     <div class="row info">
@@ -68,7 +47,7 @@
             <p id="txt2">¡Arma tu posada en un solo lugar!</p>
         </div>
         <div class="col-md-6">
-            <img src="pinata_estrella.jpg" class="image-fluid" alt="">
+            <img src="pinata.png" class="image-fluid" alt="">
         </div>
         <div class="col-md-6 align-self-center">
             <p id="txt3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa porro molestias</p>
