--- a/index.html
+++ b/index.html
@@ -64,10 +64,13 @@
     </video>
 
     <div id="first" class="container">
-        <h1 class="text-center" id="titulo">¡Arma la mejor posada del año!</h1> <br>
+        <h1 class="text-center" id="titulo">¡Arma la mejor posada del año!</h1>
+        <br>
         <p class="text-center" id="sub">Con
             <b id="underline">Posadas Perronas</b> podrás organizar tu posada de la manera más sencilla.</p>
-        <p class="text-center"><a class="btn btn-primary btn-lg" id="boton" href="">¡Jalo!</a></p>
+        <p class="text-center">
+            <a class="btn btn-primary btn-lg" id="boton" href="">¡Jalo!</a>
+        </p>
     </div>
 
     <div class="row info">
@@ -82,28 +85,27 @@
         </div>
         <br>
         <br>
-        <div class="col-md-12 align-self-center">
-            <h3 class="black">Conoce nuestros resultados</h3>
+        <div class="col-md-12">
+            <h3 class="black text-center">
+                <b>Conoce nuestros resultados</b>
+            </h3>
         </div>
-        <div class="col-md-3 align-self-center">
-            <p class="black">+3000</p>
-            <p class="black">De posadas chidas</p>
+        <div class="col-md-3">
+            <p class="black text-center">+3000</p>
+            <p class="black text-center">De posadas chidas</p>
         </div>
-        <div class="col-md-3 align-self-center">
-            <p class="black">+3000</p>
-            <p class="black">De posadas chidas</p>
+        <div class="col-md-3">
+            <p class="black text-center">+3000</p>
+            <p class="black text-center">De posadas chidas</p>
         </div>
-        <div class="col-md-3 align-self-center">
-            <p class="black">+3000</p>
-            <p class="black">De posadas chidas</p>
+        <div class="col-md-3">
+            <p class="black text-center">+3000</p>
+            <p class="black text-center">De posadas chidas</p>
         </div>
-        <div class="col-md-3 align-self-center">
-            <p class="black">+3000</p>
-            <p class="black">De posadas chidas</p>
+        <div class="col-md-3">
+            <p class="black text-center">+3000</p>
+            <p class="black text-center">De posadas chidas</p>
         </div>
-    </div>
-    <div class="row">
-
     </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
